--- a/controllers/auth/verification-successful.html
+++ b/controllers/auth/verification-successful.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Email Verification Successful</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+      }
 
-        .container {
-            max-width: 600px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
+      .container {
+        max-width: 600px;
+        margin: 50px auto;
+        padding: 20px;
+        background-color: #fff;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
 
-        .success-message {
-            text-align: center;
-        }
+      .success-message {
+        text-align: center;
+      }
 
-        .success-message h1 {
-            color: #4caf50;
-        }
+      .success-message h1 {
+        color: #4caf50;
+      }
 
-        .success-message p {
-            font-size: 18px;
-            color: #333;
-        }
+      .success-message p {
+        font-size: 18px;
+        color: #333;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="success-message">
-            <h1>Verification Successful!</h1>
-            <p>Your email has been successfully verified.</p>
-        </div>
+      <div class="success-message">
+        <h1>Підтвердження успішне!</h1>
+        <p>Вашу електронну адресу успішно підтверджено.</p>
+      </div>
     </div>
-</body>
+  </body>
 </html>
